# drdns

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: alloc.c  alloc.h  alloc.rs  alloc_re.c  alloc_re.rs  auto-str.rs  auto_home.h  auto_home.rs  axfr-get.rs  axfrdns-conf.rs  axfrdns.rs  buffer.rs  buffer_1.rs  buffer_2.rs  buffer_copy.rs  buffer_get.c  buffer_get.rs  buffer_put.c  buffer_put.rs  buffer_read.rs  buffer_write.rs  byte.h  byte.rs  byte_chr.c  byte_chr.rs  byte_copy.c  byte_copy.rs  byte_cr.c  byte_cr.rs  byte_diff.rs  byte_zero.c  byte_zero.rs  cache.rs  cachetest.rs  case.rs  case_diffb.rs  case_diffs.rs  case_lowerb.rs  cdb.rs  cdb_hash.rs  (+149 more)
src/cdb/: cdb.rs  hash.rs  make.rs  mod.rs
src/dns/: domain.rs  dtda.rs  ip.rs  ip4.rs  ipq.rs  mod.rs  mx.rs  name.rs  packet.rs  random.rs  rcip.rs  rcrw.rs  resolve.rs  sortip.rs  transmit.rs  txt.rs
tests/: README.md
